--- a/app/views/1-8-7/includes/auto-js.html
+++ b/app/views/1-8-7/includes/auto-js.html
@@ -132,7 +132,384 @@
        'Imperial College of Science, Technology and Medicine 10003270',
        'University of Wales Prifysgol Cymru 10008574',
        'University of Worcester, the 10007139'
-       ]
+     ];
+
+     var validationRules = [
+      'Accom_01',
+      'AchDate_02',
+      'AchDate_03',
+      'AchDate_04',
+      'AchDate_05',
+      'AchDate_07',
+      'AchDate_08',
+      'AchDate_09',
+      'AchDate_10',
+      'AchDate_11',
+      'AddHours_01',
+      'AddHours_02',
+      'AddHours_03',
+      'AddHours_04',
+      'AddHours_05',
+      'AddHours_06',
+      'Addline1_03',
+      'AFinDate_03',
+      'AFinDate_04',
+      'AFinDate_05',
+      'AFinDate_06',
+      'AFinDate_07',
+      'AFinDate_08',
+      'AFinDate_09',
+      'AFinDate_12',
+      'AFinType_01',
+      'AFinType_02',
+      'AFinType_04',
+      'AFinType_07',
+      'AFinType_08',
+      'AFinType_10',
+      'AFinType_11',
+      'AFinType_12',
+      'AFinType_13',
+      'AFinType_14',
+      'AgreeId_02',
+      'AimSeqNumber_02',
+      'AimType_01',
+      'AimType_05',
+      'AimType_07',
+      'ALSCost_02',
+      'CampId_01',
+      'CampId_02',
+      'CompStatus_01',
+      'CompStatus_02',
+      'CompStatus_03',
+      'CompStatus_04',
+      'CompStatus_05',
+      'CompStatus_06',
+      'CompStatus_07',
+      'ConRefNumber_01',
+      'ConRefNumber_03',
+      'ContPrefType_01',
+      'ContPrefType_02',
+      'ContPrefType_03',
+      'ContPrefType_04',
+      'ContPrefType_05',
+      'ContPrefType_06',
+      'ContPrefType_07',
+      'DateEmpStatApp_01',
+      'DateEmpStatApp_02',
+      'DateOfBirth_01',
+      'DateOfBirth_02',
+      'DateOfBirth_04',
+      'DateOfBirth_05',
+      'DateOfBirth_06',
+      'DateOfBirth_07',
+      'DateOfBirth_12',
+      'DateOfBirth_13',
+      'DateOfBirth_14',
+      'DateOfBirth_20',
+      'DateOfBirth_23',
+      'DateOfBirth_24',
+      'DateOfBirth_25',
+      'DateOfBirth_26',
+      'DateOfBirth_27',
+      'DateOfBirth_30',
+      'DateOfBirth_32',
+      'DateOfBirth_34',
+      'DateOfBirth_35',
+      'DateOfBirth_36',
+      'DateOfBirth_37',
+      'DateOfBirth_38',
+      'DateOfBirth_40',
+      'DateOfBirth_41',
+      'DateOfBirth_43',
+      'DateOfBirth_44',
+      'DateOfBirth_46',
+      'DateOfBirth_47',
+      'DateOfBirth_48',
+      'DateOfBirth_49',
+      'DateOfBirth_50',
+      'DateOfBirth_51',
+      'DateOfBirth_52',
+      'DateOfBirth_53',
+      'DateOfBirth_55',
+      'DelLocPostCode_03',
+      'DelLocPostCode_11',
+      'DelLocPostCode_14',
+      'DelLocPostCode_15',
+      'DelLocPostCode_16',
+      'DelLocPostCode_17',
+      'DelLocPostCode_18',
+      'DLOCK_01',
+      'DLOCK_02',
+      'DLOCK_03',
+      'DLOCK_04',
+      'DLOCK_05',
+      'DLOCK_06',
+      'DLOCK_07',
+      'DLOCK_08',
+      'DLOCK_09',
+      'DLOCK_10',
+      'DLOCK_11',
+      'DLOCK_12',
+      'DOMICILE_01',
+      'DOMICILE_02',
+      'ELQ_01',
+      'ELQ_02',
+      'EmpId_01',
+      'EmpId_02',
+      'EmpId_10',
+      'EmpId_13',
+      'EmpOutcome_01',
+      'EmpOutcome_02',
+      'EmpOutcome_03',
+      'EmpStat_01',
+      'EmpStat_02',
+      'EmpStat_04',
+      'EmpStat_05',
+      'EmpStat_06',
+      'EmpStat_07',
+      'EmpStat_08',
+      'EmpStat_09',
+      'EmpStat_10',
+      'EmpStat_11',
+      'EmpStat_12',
+      'EmpStat_14',
+      'EmpStat_15',
+      'EmpStat_17',
+      'EmpStat_18',
+      'EmpStat_19',
+      'EmpStat_20',
+      'EngGrade_01',
+      'EngGrade_02',
+      'EngGrade_03',
+      'EngGrade_04',
+      'Entity_1',
+      'EPAOrgID_01',
+      'EPAOrgID_02',
+      'EPAOrgID_03',
+      'ESMType_01',
+      'ESMType_02',
+      'ESMType_05',
+      'ESMType_07',
+      'ESMType_08',
+      'ESMType_09',
+      'ESMType_10',
+      'ESMType_11',
+      'ESMType_12',
+      'ESMType_13',
+      'ESMType_14',
+      'ESMType_15',
+      'Ethnicity_01',
+      'FamilyName_01',
+      'FamilyName_02',
+      'FamilyName_04',
+      'FD_Accom_AL',
+      'FD_AddHours_AL',
+      'FD_AddHours_AR',
+      'FD_AddLine1_AL',
+      'FD_AddLine1_AP',
+      'FD_AddLine2_AL',
+      'FD_AddLine2_AP',
+      'FD_AddLine3_AL',
+      'FD_AddLine3_AP',
+      'FD_AddLine4_AL',
+      'FD_AddLine4_AP',
+      'FD_AFinAmount_AL',
+      'FD_AFinAmount_AR',
+      'FD_AFinAmount_MA',
+      'FD_AFinCode_AL',
+      'FD_AFinCode_MA',
+      'FD_AFinDate_MA',
+      'FD_AFinType_AL',
+      'FD_AFinType_AP',
+      'FD_AFinType_MA',
+      'FD_AgreeId_AL',
+      'FD_AgreeId_AP',
+      'FD_AimSeqNumber_AL',
+      'FD_AimSeqNumber_AR',
+      'FD_AimSeqNumber_MA',
+      'FD_AimType_AL',
+      'FD_AimType_MA',
+      'FD_ALSCost_AL',
+      'FD_ALSCost_AR',
+      'FD_CampId_AL',
+      'FD_CampId_AP',
+      'FD_CompStatus_AL',
+      'FD_CompStatus_MA',
+      'FD_ConRefNumber_AL',
+      'FD_ConRefNumber_AP',
+      'FD_ContactPreference_EO',
+      'FD_ContPrefCode_AL',
+      'FD_ContPrefCode_MA',
+      'FD_ContPrefType_AL',
+      'FD_ContPrefType_AP',
+      'FD_ContPrefType_MA',
+      'FD_DateEmpStatApp_MA',
+      'FD_DelLocPostCode_AL',
+      'FD_DelLocPostCode_AP',
+      'FD_DelLocPostCode_MA',
+      'FD_DOMICILE_AL',
+      'FD_DOMICILE_AP',
+      'FD_DP_DPOutcome_EO',
+      'FD_DP_LearnRefNumber_AL',
+      'FD_DP_LearnRefNumber_AP',
+      'FD_DP_LearnRefNumber_MA',
+      'FD_DP_OutCode_AL',
+      'FD_DP_OutCode_MA',
+      'FD_DP_OutCollDate_MA',
+      'FD_DP_OutStartDate_MA',
+      'FD_DP_OutType_AL',
+      'FD_DP_OutType_AP',
+      'FD_DP_OutType_MA',
+      'FD_DP_ULN_AL',
+      'FD_DP_ULN_AR',
+      'FD_DP_ULN_MA',
+      'FD_ELQ_AL',
+      'FD_Email_AL',
+      'FD_Email_AP',
+      'FD_EmpId_AL',
+      'FD_EmploymentStatusMonitoring_EO',
+      'FD_EmpOutcome_AL',
+      'FD_EmpStat_AL',
+      'FD_EmpStat_MA',
+      'FD_EngGrade_AL',
+      'FD_EngGrade_AP',
+      'FD_EPAOrgID_AL',
+      'FD_EPAOrgID_AP',
+      'FD_ESMCode_AL',
+      'FD_ESMCode_MA',
+      'FD_ESMType_AL',
+      'FD_ESMType_AP',
+      'FD_ESMType_MA',
+      'FD_Ethnicity_AL',
+      'FD_Ethnicity_MA',
+      'FD_FamilyName_AL',
+      'FD_FamilyName_AP',
+      'FD_FINAMOUNT_AL',
+      'FD_FINAMOUNT_AR',
+      'FD_FINAMOUNT_MA',
+      'FD_FINTYPE_AL',
+      'FD_FINTYPE_MA',
+      'FD_FUNDCOMP_AL',
+      'FD_FUNDCOMP_MA',
+      'FD_FUNDLEV_AL',
+      'FD_FUNDLEV_MA',
+      'FD_FundModel_AL',
+      'FD_FundModel_MA',
+      'FD_FworkCode_AL',
+      'FD_GivenNames_AL',
+      'FD_GivenNames_AP',
+      'FD_GROSSFEE_AL',
+      'FD_GROSSFEE_AR',
+      'FD_HEPostCode_AL',
+      'FD_HEPostCode_AP',
+      'FD_LearnAimRef_AL',
+      'FD_LearnAimRef_AP',
+      'FD_LearnAimRef_MA',
+      'FD_LearnDelFAMCode_AL',
+      'FD_LearnDelFAMCode_AP',
+      'FD_LearnDelFAMCode_MA',
+      'FD_LearnDelFAMType_AL',
+      'FD_LearnDelFAMType_AP',
+      'FD_LearnDelFAMType_MA',
+      'FD_LearnerFAM_EO',
+      'FD_LearnerHE_EO',
+      'FD_LearnerHEFinancialSupport_EO',
+      'FD_LearnFAMCode_AL',
+      'FD_LearnFAMCode_MA',
+      'FD_LearnFAMType_AL',
+      'FD_LearnFAMType_AP',
+      'FD_LearnFAMType_MA',
+      'FD_LearningDelivery_EO',
+      'FD_LearningDeliveryHE_EO',
+      'FD_LearnPlanEndDate_MA',
+      'FD_LearnRefNumber_AL',
+      'FD_LearnRefNumber_AP',
+      'FD_LearnRefNumber_MA',
+      'FD_LearnStartDate_MA',
+      'FD_LLDDandHealthProblem_EO',
+      'FD_LLDDCat_AL',
+      'FD_LLDDCat_MA',
+      'FD_LLDDHealthProb_AL',
+      'FD_LLDDHealthProb_MA',
+      'FD_MathGrade_AL',
+      'FD_MathGrade_AP',
+      'FD_MODESTUD_AL',
+      'FD_MODESTUD_MA',
+      'FD_MSTUFEE_AL',
+      'FD_MSTUFEE_MA',
+      'FD_NETFEE_AL',
+      'FD_NETFEE_AR',
+      'FD_NINumber_AL',
+      'FD_NINumber_AP',
+      'FD_NUMHUS_AL',
+      'FD_NUMHUS_AP',
+      'FD_OtherFundAdj_AL',
+      'FD_OtherFundAdj_AR',
+      'FD_OTJHours_AL',
+      'FD_OTJHours_AR',
+      'FD_Outcome_AL',
+      'FD_OutGrade_AL',
+      'FD_OutGrade_AP',
+      'FD_PartnerUKPRN_AL',
+      'FD_PartnerUKPRN_AR',
+      'FD_PCFLDCS_AL',
+      'FD_PCFLDCS_AR',
+      'FD_PCOLAB_AL',
+      'FD_PCOLAB_AR',
+      'FD_PCSLDCS_AL',
+      'FD_PCSLDCS_AR',
+      'FD_PCTLDCS_AL',
+      'FD_PCTLDCS_AR',
+      'FD_PlanEEPHours_AL',
+      'FD_PlanEEPHours_AR',
+      'FD_PlanLearnHours_AL',
+      'FD_PlanLearnHours_AR',
+      'FD_PMUKPRN_AL',
+      'FD_PMUKPRN_AR',
+      'FD_Postcode_AL',
+      'FD_Postcode_AP',
+      'FD_Postcode_MA',
+      'FD_PostcodePrior_AL',
+      'FD_PostcodePrior_AP',
+      'FD_PostcodePrior_MA',
+      'FD_PrevLearnRefNumber_AL',
+      'FD_PrevLearnRefNumber_AP',
+      'FD_PrevUKPRN_AL',
+      'FD_PrevUKPRN_AR',
+      'FD_PrimaryLLDD_AL',
+      'FD_PriorAttain_AL',
+      'FD_PriorLearnFundAdj_AL',
+      'FD_PriorLearnFundAdj_AR',
+      'FD_ProgType_AL',
+      'FD_ProviderSpecDeliveryMonitoring_EO',
+      'FD_ProviderSpecLearnerMonitoring_EO',
+      'FD_ProvSpecDelMon_AL',
+      'FD_ProvSpecDelMon_AP',
+      'FD_ProvSpecDelMon_MA',
+      'FD_ProvSpecDelMonOccur_AL',
+      'FD_ProvSpecDelMonOccur_AP',
+      'FD_ProvSpecDelMonOccur_MA',
+      'FD_ProvSpecLearnMon_AL',
+      'FD_ProvSpecLearnMon_AP',
+      'FD_ProvSpecLearnMon_MA',
+      'FD_ProvSpecLearnMonOccur_AL',
+      'FD_ProvSpecLearnMonOccur_AP',
+      'FD_ProvSpecLearnMonOccur_MA',
+      'FD_PwayCode_AL',
+      'FD_QUALENT3_AL',
+      'FD_QUALENT3_AP',
+      'FD_SEC_AL',
+      'FD_Sex_AL',
+      'FD_Sex_AP',
+      'FD_Sex_MA',
+      'FD_SOC2000_AL',
+      'FD_SPECFEE_AL',
+      'FD_SPECFEE_MA',
+      'FD_SSN_AL'
+     ]
+
+
+
  </script>
 
      <script type="text/javascript">
@@ -147,3 +524,14 @@
         // value: '{{ data['provider'] }}'
       })
     </script>
+    <script type="text/javascript">
+     rules = document.querySelector('#tt-overlay-rules')
+     rulesId = 'autocomplete-overlay-rules'
+     accessibleAutocomplete({
+       displayMenu: 'overlay',
+       element: rules,
+       id: rulesId,
+       source: validationRules,
+       placeholder: 'e.g AddHours_01',
+     })
+   </script>
