--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -187,8 +187,17 @@ hr{
 
 }
 
-
-
+#autocomplete-overlay-rules {
+  border-right:0px;
+}
+#validation-message-period { border-left:0px; height:42px;  }
+.vertical-divider {
+  width:1px;
+  border-right:1px solid #707070;
+  height:20px;
+  margin-left:-2px;
+  margin-top:10px;
+}
 .standard-search {
 
   .govuk-form-group {
@@ -826,7 +835,16 @@ html {
   display: none;
   float: right;
 }
-
+.position-right {
+  float:right;
+}
+.govuk-input--width-6 {
+    max-width: 13.8ex;
+  }
+  .govuk-input--width-7 {
+      max-width: 15ex;
+      font-size: 15px;
+    }
 
 // @include govuk-media-query($from: mobile) {
 //   .signed-in-user {
@@ -1612,9 +1630,70 @@ html {
     border-right: 6px solid transparent;
     border-top: 9px solid #000;
 }
-.status-hide, .status-processing-hide, .app-proceed-button-hide {
+.status-hide, .status-processing-hide, .app-proceed-button-hide, .row-hide {
   display: none;
 }
+
+.banner-destructive-without-action, .banner-destructive-with-action, .banner-warning-with-action, .banner-warning-without-action, .banner-success-with-action, .banner-success-without-action, .banner-information-with-action, .banner-information-without-action, .banner-temporary-message-without-action {
+    font-family: "nta", Arial, sans-serif;
+    font-weight: 400;
+    text-transform: none;
+    font-size: 18px;
+    line-height: 1.2;
+    padding: 20px;
+    margin-top: 15px;
+    border-width: 5px;
+    border-style: solid;
+}
+
+
+
+@media (min-width: 641px) {
+    .banner-destructive-without-action .banner-content, .banner-destructive-with-action .banner-content, .banner-warning-with-action .banner-content, .banner-warning-without-action .banner-content, .banner-success-with-action .banner-content, .banner-success-without-action .banner-content, .banner-information-with-action .banner-content, .banner-information-without-action .banner-content, .banner-temporary-message-without-action .banner-content {
+        font-size: 19px;
+        line-height: 1.31579;
+    }
+}
+
+.banner-destructive-without-action .banner-content ul, .banner-destructive-with-action .banner-content ul, .banner-warning-with-action .banner-content ul, .banner-warning-without-action .banner-content ul, .banner-success-with-action .banner-content ul, .banner-success-without-action .banner-content ul, .banner-information-with-action .banner-content ul, .banner-information-without-action .banner-content ul, .banner-temporary-message-without-action .banner-content ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    margin-top: 5px;
+}
+
+.banner-destructive-without-action .banner-content ul li, .banner-destructive-with-action .banner-content ul li, .banner-warning-with-action .banner-content ul li, .banner-warning-without-action .banner-content ul li, .banner-success-with-action .banner-content ul li, .banner-success-without-action .banner-content ul li, .banner-information-with-action .banner-content ul li, .banner-information-without-action .banner-content ul li, .banner-temporary-message-without-action .banner-content ul li {
+    margin-bottom: 5px;
+}
+
+.banner-destructive-without-action, .banner-destructive-with-action {
+    color: #b10e1e;
+}
+
+.banner-warning-with-action, .banner-warning-without-action {
+    color: #cd4c0b;
+}
+
+.banner-success-with-action, .banner-success-with-action p,  .banner-success-without-action, .banner-success-without-action p  {
+    color: #00823b;
+}
+
+.banner-action {
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.banner-message {
+    font-family: "nta", Arial, sans-serif;
+    font-weight: 400;
+    text-transform: none;
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: bold;
+    margin: 0;
+}
+
+
+
 
 @media print {
     .home-services__heading {
