--- a/app/views/1-8-7/period-end-part-1.html
+++ b/app/views/1-8-7/period-end-part-1.html
@@ -117,11 +117,12 @@
         </h2>
         <ul class="app-task-list__items govuk-!-padding-left-0 govuk-!-margin-bottom-0">
           <li class="app-task-list__item" id="start-internal-report-sub-path">
-            Start internal reports subpath <span class="status-processing-hide"> - Status : Processing</span><span class="status-hide"> - Status : Completed</span> <a href="#internal-reports-path"> ❯</a>
+            Start internal reports subpath <span class="status-processing-hide"> - Status : Processing</span>
+            <span class="status-hide"> - Status : Completed</span>
+            <a href="#internal-reports-path"> ❯</a><img class="spinner spinner1" style="width:5%; text-align:left" src="/public/images/spinner-gif-13.gif" alt="">
           </li>
-          <li class="app-task-list__item app-task-list-continue app-proceed-button-hide">
-            <button>Proceed<div class="triangle-down"></div></button>
-
+          <li id="start-internal-report-sub-path-button" class="app-task-list__item app-task-list-continue app-proceed-button-hide">
+            <button class="proceedButton">Proceed<div class="triangle-down"></div></button>
           </li>
         </ul>
       </li>
@@ -129,10 +130,13 @@
         <ul class="app-task-list__items govuk-!-padding-left-0 govuk-!-margin-bottom-0">
           <li class="app-task-list__item" id="reference-data-fcs">
             <span id="continueState" class="">Reference data FCS</span>
-           <ul class="app-task-list__items govuk-!-padding-left-5 govuk-!-margin-top-2 govuk-!-margin-bottom-2 status-hide">
-              <li>Job Id : 180723, Status : Completed</li>
+            <ul class="app-task-list__items govuk-!-padding-left-5 govuk-!-margin-top-2 govuk-!-margin-bottom-2 status-hide">
+              <li>Job Id : 180723, Status <span class="status-processing-hide"> - Status : Processing</span>
+              <span class="status-hide"> - Status : Completed</span><img class="spinner spinner1" style="width:5%; text-align:left" src="/public/images/spinner-gif-13.gif" alt=""></li>
             </ul>
-              <!--<div><a id="startRound3" href="#" class="govuk-button govuk-button--secondary govuk-!-margin-bottom-2 govuk-!-margin-left-5">Proceed</a></div> -->
+          </li>
+          <li class="app-task-list__item app-task-list-continue app-proceed-button-hide">
+            <button class="proceedButton">Proceed<div class="triangle-down"></div></button>
           </li>
 
           <li class="app-task-list__item" id="referenceDataEPA">
